--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "concurrently": "^6.2.1",
+    "emailjs-com": "^3.2.0",
     "json-server": "^0.16.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
